fix fade in,uiux section alignment

--- a/style.css
+++ b/style.css
@@ -548,7 +548,7 @@ button:hover {
   line-height: 1.5;
 }
 
-/* - collage gallery - */
+/* - other collage gallery - */
 .collage-gallery {
   max-width: 1400px; 
   margin: 0 auto;    
@@ -747,8 +747,14 @@ button:hover {
 }
 .project-info {
   max-width: 400px;
-  text-align: center;
+  text-align: center; 
+  margin: 0 auto; 
+  display: flex;
+  flex-direction: column; 
+  align-items: center;  
+  justify-content: center; 
 }
+
 .project-info h2 {
   font-size: 2rem;
   font-weight: 400;
@@ -1061,19 +1067,14 @@ button:hover {
   line-height: 1.6;
   color: #3e4e50;
 }
-.right-image {
+.vr-right-image {
   flex: 2;
   position: relative;
 }
-.right-image img {
+.vr-right-image img {
   width: 100%;
   height: auto;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-.right-image a img:hover {
-  transform: scale(1.02);
-  cursor: pointer;
-  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
 }
 
 /* - fade classes exist - */
@@ -1105,7 +1106,7 @@ button:hover {
   margin: 120px auto 10px;
   max-width: 1200px;
   opacity: 0;
-  animation: fadeIn 1.5s ease-in forwards;
+  animation: fadeIn 1s ease-in forwards;
 }
 .stylist-description,
 .stylist-section p,
@@ -1118,7 +1119,7 @@ button:hover {
   max-width: 1200px;
   margin: 0 auto 15px auto;
   opacity: 0;
-  animation: fadeIn 1.5s ease-in forwards;
+  animation: fadeIn 1s ease-in forwards;
   animation-delay: 0.1s;
   list-style-position: inside
 }
@@ -1165,6 +1166,7 @@ button:hover {
   opacity: 0;
   animation: fadeIn 1.5s ease-in forwards;
   animation-delay: 0.2s;
+  
 }
 .stylist-gallery h3,
 .stylist-section h3 {
@@ -1245,6 +1247,7 @@ button:hover {
   max-width: 1200px;
   margin: 20px auto;
   overflow: hidden; 
+  animation: fadeIn 1s ease-in forwards;
 }
 .carousel-track {
   display: flex;
@@ -1346,7 +1349,7 @@ footer a:hover {
   margin: 120px auto 10px;
   max-width: 1200px;
   opacity: 0;
-  animation: fadeIn 1.5s ease-in forwards;
+  animation: fadeIn 1s ease-in forwards;
 }
 .underground-section p,
 .underground-section li {
@@ -1356,7 +1359,7 @@ footer a:hover {
   max-width: 1200px;
   margin: 0 auto 15px auto;
   opacity: 0;
-  animation: fadeIn 1.5s ease-in forwards;
+  animation: fadeIn 1s ease-in forwards;
   animation-delay: 0.1s;
 }
 .underground-section ul {
@@ -1390,10 +1393,12 @@ footer a:hover {
   max-width: 1200px;
   margin: 20px auto;
   text-align: center;
+  
 }
 .screenshot-container img {
   max-width: 100%;
   height: auto;
+  animation: fadeIn 1s ease-in forwards;
 }
 
 /* - underground gallery grid - */
@@ -1710,7 +1715,7 @@ footer a:hover {
   margin: 120px auto 10px;
   max-width: 1200px;
   opacity: 0;
-  animation: fadeIn 1.5s ease-in forwards;
+  animation: fadeIn 1s ease-in forwards;
 }
 
 .remake-image-collage {
@@ -1722,6 +1727,7 @@ footer a:hover {
   grid-template-columns: repeat(4, 1fr);
   grid-auto-rows: auto;
   position: relative; 
+  animation: fadeIn 1.5s ease-in forwards;
 }
 
 
@@ -1875,7 +1881,7 @@ footer a:hover {
   margin: 120px auto 10px;
   max-width: 1200px;
   opacity: 0;
-  animation: fadeIn 1.5s ease-in forwards;
+  animation: fadeIn 1s ease-in forwards;
 }
 
 
@@ -1894,6 +1900,7 @@ footer a:hover {
   position: relative;
   max-width: 1200px;
   margin: auto;
+  animation: fadeIn 1.2s ease-in forwards;
 }
 
 .shoe-process-carousel .carousel-slide {
@@ -2059,7 +2066,7 @@ footer a:hover {
   margin: 120px auto 10px;
   max-width: 1400px;
   opacity: 0;
-  animation: fadeIn 1.5s ease-in forwards;
+  animation: fadeIn 1s ease-in forwards;
 }
 
 .uniform-intro {
@@ -2069,6 +2076,7 @@ footer a:hover {
   color: #555;
   text-align: left;
   line-height: 1.6;
+  animation: fadeIn 1.2s ease-in forwards;
 }
 
 .finaluniform-carousel-container {
@@ -2078,6 +2086,7 @@ footer a:hover {
   margin: auto;
   overflow: hidden;
   padding: 20px;
+  animation: fadeIn 1.2s ease-in forwards;
 }
 
 
@@ -2270,7 +2279,7 @@ footer a:hover {
   margin: 120px auto 10px;
   max-width: 1400px;
   opacity: 0;
-  animation: fadeIn 1.5s ease-in forwards;
+  animation: fadeIn 1s ease-in forwards;
 }
 
 
@@ -2279,11 +2288,13 @@ h2 {
   text-align: left;
   color: #3e4e50;
   margin-bottom: 20px;
+  animation: fadeIn 1s ease-in forwards;
 }
 
 .fashion-illustration {
   display: flex;
   justify-content: center; 
+  animation: fadeIn 1s ease-in forwards;
 }
 
 .fashion-illustration .content-wrapper {
